SigmaCodebackup3rdSep/objects/Customer_Saved_Card__c.object
<CustomObject>
    <fields>
        <fullName>AppName__c</fullName>
        <label>AppName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVVNO__c</fullName>
        <label>CVV</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <label>Card Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_No__c</fullName>
        <label>Credit Card No</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiry_Month__c</fullName>
        <label>Expiry Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Year__c</fullName>
        <label>Expiry Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Saved Cards (Merchant Account)</relationshipLabel>
        <relationshipName>Customer_Saved_Cards1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Saved Cards (Parent Account)</relationshipLabel>
        <relationshipName>Customer_Saved_Cards2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Vendor__c</fullName>
        <label>Payment Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stripe</fullName>
                </value>
                <value>
                    <fullName>Paypal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paypal_Card_No__c</fullName>
        <label>Paypal Card No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QSCompanyID__c</fullName>
        <label>QSCompanyID</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFDC Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Saved Cards</relationshipLabel>
        <relationshipName>Customer_Saved_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceCvv__c</fullName>
        <label>SourceCvv</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserEmail__c</fullName>
        <label>UserEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>cardStatus__c</fullName>
        <label>cardStatus</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Customer Saved Card</label>
    <nameField>
        <displayFormat>CC{000000}</displayFormat>
        <label>Customer Saved Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Saved Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>